--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -3,9 +3,9 @@
     android:shape="rectangle">
 
     <gradient
-        android:angle="90"
-        android:startColor="#FF9800"
-        android:endColor="#EB2D6E"/>
+        android:angle="89"
+        android:startColor="#00BCD4"
+        android:endColor="#A2AE2F"/>
 
     <padding
         android:bottom="10dp"
